--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,10 +1,3 @@
-iframe{
-    border: none;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-}
 html,body{
     height: 100%;
 }
@@ -13,5 +6,8 @@ html,body{
 }
 .grey{
     color: #CCCCCC;
+}
+.hide{
+    display: none;
 }
 
